# miniscience

./: .gitignore
FEnics/: main.cpp
gmsh_lab/: CMakeLists.txt
gmsh_lab/lab1/: 1.cpp  2.cpp  screw.stl  stl.cpp  torus.cpp
micro_project/: dinamic_poisson.avi  main.cpp  poisson.py
refraction/: Solver.py  Visualization.py  constants.py  main.py
vtk/: CMakeLists.txt
vtk_lab/: CMakeLists.txt  README.md  paraview2.avi  tetr3d.cpp
